[package]
name = "devprofiler"
version = "0.2.9"
edition = "2021"
authors = ["Tapish Rathore <tapish@vibinex.com>"]
license = "GPL-3.0-or-later"
description = "CLI tool for analysing code contribution to a repository"
readme = "README.md"
homepage = "https://github.com/Alokit-Innovations/dev-profiler"
repository = "https://github.com/Alokit-Innovations/dev-profiler"
keywords = ["cli", "tools", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version = "0.15", default-features = false, features= ["vendored-libgit2"]}
detect-lang = "0.1.5"
clap = {version = "4.1.4", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
sha2 = "0.10"
base64ct = "1.5.3"
sha256 = "1.1.1"
walkdir = "2"
inquire = "0.5.2"
pkg-config = "0.3.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# todo - check all lib licences
