[package]
name = "devprofiler"
version = "0.2.1"
edition = "2021"
authors = ["Tapish Rathore <tapish@vibinex.com>"]
license = "GPL-3.0-or-later"
description = "CLI tool for analysing code contribution to a repository"
readme = "README.md"
homepage = "https://github.com/Alokit-Innovations/dev-profiler"
repository = "https://github.com/Alokit-Innovations/dev-profiler"
keywords = ["cli", "tools", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64ct = "1.5.3"
sha256 = "1.1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
google-cloud-pubsub = "0.15.0"
google-cloud-default = { version = "0.3.0", features = ["pubsub"] }
google-cloud-googleapis = "0.9.0"
google-cloud-auth = "0.10.0"
futures-util = "0.3.28"
tokio-util = "0.7.8"
sled = "0.34.7"

# todo - check all lib licences
